# bun-axum-sqlite-bench

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-14ead4513fec3db872b928046eab2e8034c7afc3bd6e0e260455225fb53a9fa3.json
bun-test/: bun.lockb  package.json
bun-test/drizzle/: 0000_cooing_xorn.sql
bun-test/drizzle/meta/: 0000_snapshot.json  _journal.json
bun-test/src/: index.ts  schema.ts
src/: main.rs
